syntax = "proto3";
package grpc;

option java_multiple_files = true;
option java_package = "grpc";
option java_outer_classname = "EchoServiceProto";



message ReqAllOffers{
}

message ResAllOffers{
	string message = 1;
}


message NewOffer{
	string name = 1;
	string time = 2;
	string cost = 3;
}

message ReqDelOffer{
	string id = 1;
}

message ResDelOffer{
	string message = 1;
}

message ReqFreeTime{
}
message ResFreeTime{
	string message = 1;
}

message ReqAddEntry{
	string time = 1;
	string id = 2;
}
message ReqDelEntry{
	string id = 1;
}

message ResAddEntry{
	string message = 1;
}
message ResDelEntry{
	string message = 1;
}

service EchoService{
    rpc allOffers(ReqAllOffers) returns (ResAllOffers){}
    rpc reqNewOffer(NewOffer) returns (ResAllOffers){}
	  rpc delOffer(ReqDelOffer) returns (ResDelOffer){}
		rpc getFreeTime(ReqFreeTime) returns (ResFreeTime){}
	  rpc addEntry(ReqAddEntry) returns (ResAddEntry){}
	  rpc delEntry(ReqDelEntry) returns (ResDelEntry){}
}